add vars for config params, fix file permissions, other changes

--- a/templates/youtrack.service.j2
+++ b/templates/youtrack.service.j2
@@ -6,7 +6,7 @@ After=syslog.target network.target
 [Service]
 Type=simple
 WorkingDirectory=/opt/youtrack
-ExecStart=/usr/bin/java -jar /opt/youtrack/youtrack.jar --J-Xmx1024m --J-Djava.security.egd=/dev/./urandom --data-dir=/var/lib/youtrack/data   --no-browser  8080
+ExecStart=/usr/bin/java -jar {{youtrack_path_jar}} --J-Xmx1024m --J-Djava.security.egd=/dev/./urandom --data-dir={{youtrack_data_path}} --no-browser 8080
 User=youtrack
 
 [Install]
