--- a/templates/youtrack.site.j2
+++ b/templates/youtrack.site.j2
@@ -1,7 +1,7 @@
 server { 
     listen 80; 
-    server_name system.akademiano.org;
-    location / { 
+    server_name {{youtrack_server_name}};
+    location / {
         proxy_set_header X-Forwarded-Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
         proxy_set_header X-Forwarded-Proto $scheme; 
